src/CoverPage.css
.coverContent {
    display: flex;

}

.coverTitle {
    font-family: "Open Sans", sans-serif;
    font-weight: bold;
    font-size: 36px;
    color: #000000;

}

.coverText {
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    padding-top: 18px;
    padding-bottom: 18px;
    margin-bottom: 0px;
}

.coverImageContainer {
    min-width: 272px;
    min-height: 387px;
    max-width: 272px;
    max-height: 387px;
    padding-right: 72px;
}

.coverInfoContainer {
    padding-left: 90px;
    padding-right: 90px;
    display: flex;
    justify-content: center;
    flex-direction: column;

}
#coverVase {
    width: 100%;
    height: 100%;
    position: relative;
}

#coverBlob {
    left: 0;
    position: absolute;
    width: 306px;
    height: 387px;
}

.getStarted { 
    float: none;
}
#coverLeaves {
    left: 0;
    position: absolute;
    width: 306px;
    height: 387px;
}

@media screen and (max-width: 800px) {
    .coverText {
        font-size: 12px;
    }
  
    .coverTitle {
        font-size: 16px;
    }

    .coverImageContainer {
        display: none !important
    }

    .getStarted {
        width: 100%;
        font-size: 12px;
    }

    .coverInfoContainer {
        padding-right: 45px;
        padding-left: 45px;
    }
  }

